# imagine

./: color_assigner.py  drawer.py  main.py  originality_scorer.py  pyproject.toml  reader.py  sentiment_analyser.py
examples/texts/: colors.txt  the_raven.txt
