[tool.poetry]
name = "imagine"
version = "0.1.0"
description = ""
authors = ["Gabriel Suazo <https://github.com/gabrielsuazo>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.9.1"
colour = "^0.1.5"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
